Add pagination support
pass page and per_page as query params
